<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:focusableInTouchMode="true"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
        app:layout_constraintRight_toRightOf="@id/guideline_right"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/logo" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/etUsername"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:drawableLeft="@drawable/ic_baseline_person_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/black"
                    android:hint="Username"
                    android:maxLines="1"
                    android:padding="15dp"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black">

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/black"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="15dp"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/user" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_background_blue"
                android:text="Login"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <CheckBox
                android:id="@+id/checkme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="10dp"

               android:textSize="17sp"
                android:text="Keep me signed in" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin">

                <TextView
                    android:id="@+id/noAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Do not have an account?"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SignUp Here"
                    android:textColor="#515BD4"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="22dp"
                android:gravity="center"
                android:weightSum="12">

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="5"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center_horizontal"
                    android:text="OR"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="5"
                    android:background="@color/black" />

            </LinearLayout>


            <com.facebook.login.widget.LoginButton
                android:id="@+id/btnfb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


