<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#515BD4"
    android:focusableInTouchMode="true"
    tools:context=".SignUpActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="@id/guideline_left"
        app:layout_constraintRight_toRightOf="@id/guideline_right"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Get Started with Herbs"
                android:textSize="30sp"
                android:layout_margin="20dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:fontFamily="cursive"/>

<!--            <RelativeLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content">-->

<!--                <TextView-->
<!--                    style="@style/viewParent.headerText.NoMode"-->
<!--                    android:layout_alignParentLeft="true"-->
<!--                    android:layout_centerVertical="true"-->
<!--                    android:text="Aila, the pioneer liquor \ndelivery app of Nepal"-->
<!--                    android:textColor="@color/whiteTextColor" />-->

<!--                <ImageView-->
<!--                    android:layout_width="100dp"-->
<!--                    android:layout_height="100dp"-->
<!--                    android:layout_alignParentTop="true"-->
<!--                    android:layout_alignParentRight="true"-->
<!--                    android:src="@drawable/img_aila" />-->
<!--            </RelativeLayout>-->

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etFname"
                        style="@style/editext"
                        android:hint="First Name"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/etLname"
                        style="@style/editext"
                        android:hint="Last Name"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/etDOB"
                        style="@style/editext"
                        android:focusable="false"
                        android:hint="Date Of Birth" />

                    <EditText
                        android:id="@+id/etUsername"
                        style="@style/editext"
                        android:hint="Username"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/etEmail"
                        style="@style/editext"
                        android:hint="Email"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/etPassword"
                        style="@style/editext"
                        android:hint="Password"
                        android:inputType="textPassword" />

                    <Button
                        android:id="@+id/btnSignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/button_background_blue"
                        android:text="Sign Up"
                        android:textColor="@color/white"
                        android:textSize="20sp" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:weightSum="12">

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="3"
                    android:background="@color/whiteTextColor" />

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center_horizontal"
                    android:text="Or Login With"
                    android:textAlignment="center"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="3"
                    android:background="@color/whiteTextColor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/or">

                <ImageView
                    android:id="@+id/facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_facebook" />

                <ImageView
                    android:id="@+id/google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_google_plus" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

<!--    <ImageView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentLeft="true"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_marginRight="11dp"-->
<!--        android:layout_marginBottom="30dp"-->
<!--        android:src="@drawable/ic_back_img"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent" />-->



</androidx.constraintlayout.widget.ConstraintLayout>